Add anchor links

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -9,3 +9,15 @@
 .page-link {
   font-size: 22px;
 }
+
+.anchor-link {
+  border: none;
+  margin-left: 0.33em;
+  font-size: 0.75em;
+  filter: invert(0.5) opacity(0.5);
+
+  &:hover {
+    filter: invert(0.5) opacity(0.75);
+    text-decoration: none;
+  }
+}
