--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,3 +26,6 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+<script type="text/javascript" src="{{ site.url }}/assets/js/addAnchors.js"></script>
+
