Update resume link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
-            <a class="page-link" href="https://docs.google.com/document/d/e/2PACX-1vSgp8H_ZyDweluSqf1sl_qk7eWDjbfowtKSlNUzDEZRYLSfjP99KghPRcqgT52hT3-_YY6bjvw3Hlxm/pub" target="_blank">Resume</a>
+            <a class="page-link" href="https://drive.google.com/file/d/12EsjWnSZlHCiv4FFuY7aqv2Qdai8RrXZ/view?usp=sharing" target="_blank">Resume</a>
         </div>
       </nav>
     {%- endif -%}
