--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -21,6 +21,7 @@ $on-laptop:        1000px !default;
 
 $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
+$grey-color:       grey;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
