--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -22,6 +22,7 @@ $on-laptop:        1000px !default;
 $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
 $grey-color:       grey;
+$grey-color-light: lightgrey;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
