--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -23,6 +23,7 @@ $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
 $grey-color:       grey;
 $grey-color-light: lightgrey;
+$grey-color-dark: rgb(80, 80, 80);
 
 // Use media queries like this:
 // @include media-query($on-palm) {
