Resolve minima conflicts

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -10,14 +10,14 @@
   font-size: 22px;
 }
 
-// .anchor-link {
-//   border: none;
-//   margin: 0.33em;
-//   font-size: 0.75em;
-//   filter: invert(0.5) opacity(0.5);
+.anchor-link {
+  border: none;
+  margin: 0.33em;
+  font-size: 0.75em;
+  filter: invert(0.5) opacity(0.5);
 
-//   &:hover {
-//     filter: invert(0.5) opacity(0.75);
-//     text-decoration: none;
-//   }
-// }
+  &:hover {
+    filter: invert(0.5) opacity(0.75);
+    text-decoration: none;
+  }
+}
